# radiotray-lite

./: .gitignore  AGENTS.md  CMakeLists.txt
.github/workflows/: release.yml
cmake/: CPackConfig.cmake.in
data/: bookmarks.xml  radiotray-lite.desktop
src/: constants.hpp  tray.hpp
